change some logic on server.js. complete swagger file
